fixed download link images gap

--- a/responsive.css
+++ b/responsive.css
@@ -1,11 +1,12 @@
 @media screen and (min-width: 768px) {
 
     main h1 {
-        font-size: 3;
+        font-size: 4.25vw;
     }
+
     main h2 {
-            font-size: 3vw;
-        }
+        font-size: 3vw;
+    }
 
     header {
         padding: 2vw 1vw 1.75vw 1.65vw;
@@ -71,20 +72,46 @@
         grid-column: 4;
     } 
 
+    .big-carousel figure figcaption {
+        font-size: 1.85vw;
+    }
+
     .trailer iframe {
         width: 512px;
         height: 320px;
     }
+
+    .download-links img {
+        width: 20vw;
+    } 
+    
+    .credit-AISNO img {
+        width: 18.5vw;
+    }
 }
 @media screen and (min-width: 1024px) {
+
+    main h1 {
+        font-size: 3.85vw;
+    }
 
     .trailer iframe {
         width: 768px;
         height: 320px;
     }
+
 }
 
 @media screen and (min-width: 1440px) {
+
+    main h1 {
+        font-size: 3.25vw;
+    }
+
+    main h2 {
+        font-size: 2.75vw;
+    }
+
     header {
         padding: 0 3px 5px 2vw;
         height: 7.5vw;
@@ -104,5 +131,6 @@
         width: 1024px;
         height: 512px;
     }
-}
+
+} 
 
